# story-studio

./: .env.example  .gitignore  ARCHITECTURE.md  Modelfile.moyan  README.md  __init__.py  api.py  expand_novel.py  export_final.py  fix_ch24.py  fix_ch30.py  fix_chapters.py  fix_review.py  fix_tomato_format.py  gen_chapters.py  gen_covers_batch.sh  gen_covers_v2.sh  gen_covers_v3.sh  gen_douyin.py  gen_douyin_b2.py  generate_blood_bond_pdf.py  generate_complete_pdf.py  generate_pdf.py  generate_polished_pdf.py  generate_rewritten_pdf.py  generate_tomato_pdf.py  jobs.py  main.py  merge_lora.py  orchestrator.py  orchestrator_state.py  planner.py  polish_douyin.py  polish_prompt.txt  polish_qianhang.py  polish_template.py.txt  pyproject.toml  run_style_polish.py  run_yubi.py  tomato_clean.py  (+2 more)
agents/: __init__.py  base.py  character_designer.py  climax_designer.py  continuity.py  coordinator.py  editor.py  hooker.py  innovator.py  knowledge.py  literary_advisor.py  llm_client.py  local_inference_client.py  ollama_client.py  scene_writer.py  showrunner.py  style_polisher.py  text_cleaner.py  title_designer.py  topic_researcher.py  volcengine_client.py  web_search.py  worklog.py  world_architect.py
characters/: 1__高欢__Gao_Huan_.md  2__韦孝宽__Wei_Xiaokuan_.md  3__斛律金__Hulü_Jin_.md  5__老卒__Old_Soldier_-_群像代表_.md
config/: __init__.py  settings.example.yaml  settings.yaml
daily_novels/: daily_novel.py  pipeline.py
example/: demo_websearch_by_apikey.py  postman_curl.txt
skills/: 挪威的森林.txt
story/: continuity_log.md  outline.md
templates/: cover_brief_template.json  (+1 more)
(+927 files in other folders)
